<resources>
    <string name="app_name">SDA Assign3 2020 Tom Garrett</string>
    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>10</item>
        <item>14</item>
    </string-array>

    <string name="images_desc">Flavors Images</string>
    <string name="plc_version">version</string>
    <string name="plc_flavor">flavor</string>
    <string name="placeholder">Order T shirt</string>

    <string name="customer_name">Name</string>
    <string name="order_message_1">Please find my order attached</string>
    <string name="order_message_collect">I will collect it in&#160;</string>
    <string name="order_message_end">Regards</string>
    <string name="notification_title">Notification!</string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="border">border</string>
    <string name="welcome_text">Welcome to my TShirt store!</string>
    <string name="welcome_description">Buy and sell TShirts here.</string>
    <string name="welcome_image_of_tshirts">Welcome image of tshirts</string>
    <string name="WelcomeLogo">Welcome page logo</string>
    <string name="send_order">SEND ORDER</string>
    <string name="or_for_collection_in_days">Or - for Collection in (days)</string>
    <string name="enter_your_delivery_address">Enter Your Delivery Address</string>
    <string name="take_photo_for_t_shirt">Take photo for T-Shirt</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="delivery">Delivery</string>
    <string name="todo">TODO</string>

</resources>
