<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/listItemLayout">

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/images_desc"
        android:src="@drawable/m_tshirt1" />

    <TextView
        android:id="@+id/flavorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="35dp"
        android:text="@string/plc_flavor"
        android:textColor="@color/TabText"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/flavorVers"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:layout_below="@+id/flavorText"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="37dp"
        android:layout_toStartOf="@+id/flavorText"
        android:layout_toEndOf="@+id/imageItem"
        android:text="@string/plc_version"
        android:textColor="@color/TabText"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/imageItem"
        android:layout_marginTop="5dp"
        android:background="@color/border_shade"
        android:contentDescription="@string/border" />

</RelativeLayout>